langtools/test/tools/javac/generics/diamond/neg/Neg10.out
Neg10.java:16:22: compiler.err.prob.found.req: Neg10.Foo<java.lang.Integer>, Neg10.Foo<java.lang.Number>
1 error
